# carl

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  NOTICE  README.md  carl.py  carl.yaml.example  hypothesis_strategies.py  llms.txt  package.json  pyproject.toml
.claude/skills/terminals/: carl.md
.github/workflows/: moat-boundary-check.yml  publish.yml
docs/: INSTALL.md  auth.md  carlcamp_activation_prompt.md  carlcamp_agent_handoff_prompt.md  carlcamp_eml_integration_brief.md  compare.md  eml_signing_protocol.md  eml_wire_format.md  hardware_interface_spec.md  mcp_multitenant.md  operations.md  paper_series.md  phase_thresholds.md  platform-parity-reply-2026-04-22.md  private_integration.md  reference.md  summercamp_eml_ux.md  v09_carl_env_design.md  v09_carl_update_design.md  v09_terminals_runtime_integration_matrix.md  v0_9_deferred_items.md  v10_agent_card_supabase_spec.md  v10_master_plan.md  v10_remote_entitlements_spec.md  v10_terminals_tech_deep_dive.md  v16_handle_runtime.md  v16_secrets_toolkit_design.md  v16_utils_inventory.md  v17_architecture_upgrade_plan.md  v17_cli_ux_and_dep_probe_plan.md  v17_cli_ux_doctrine.md  v17_dep_probe_doctrine.md  v17_team_a_readout.md  v17_team_d_readout.md  v17_team_f_readout.md  v18_carl_camp_handoff.md  v18_journey_coverage.md  v18_unified_entrypoint_plan.md  v19_anticipatory_coherence_design.md
docs/adapters/: slime.md
docs/private/: v10_resonance_boundary.md
paper/: 02-phase-adaptive-methods.md  03-coherence-trap-technical-note.md  04-interaction-chains-witness-logs.md  carl-paper.md
scripts/: benchmark_eml_reward.py  check_moat_boundary.py  eml_reward_benchmark.md  generate_hero.py  generate_paradigm_gif.py  publish_changed.py  release_version.py
src/carl_studio/: __init__.py  admin.py  agent_state.py  billing.py  billing_cli.py  bundler.py  camp.py  carlito.py  chat_agent.py  cli.py  cli_session.py  config_registry.py  consent.py  console.py  constitution.py  contract.py  curriculum.py  db.py  entitlements.py  envutil.py  feedback.py  frame.py  freshness.py  fsm_ledger.py  fsm_ledger_forward.py  gating.py  infer_cli.py  jit_context.py  knowledge_store.py  llm.py  logging_config.py  marketplace.py  marketplace_cli.py  metrics.py  project.py  project_context.py  resonant_store.py  rules.yaml  run_diff.py  session.py  (+14 more)
src/carl_studio/a2a/: README.md  __init__.py  _cli.py  agent_card.py  bus.py  connection.py  identity.py  marketplace.py  message.py  push.py  spec.py  streaming.py  task.py
src/carl_studio/adapters/: __init__.py  _common.py  atropos_adapter.py  axolotl_adapter.py  connection.py  protocol.py  registry.py  slime_adapter.py  slime_submit.py  slime_translator.py  tinker_adapter.py  trl_adapter.py  unsloth_adapter.py
src/carl_studio/agent/: __init__.py  loop.py  scheduler.py  states.py  tier_gate.py
src/carl_studio/align/: __init__.py  pipeline.py
src/carl_studio/bench/: __init__.py  probes.py  suite.py
src/carl_studio/cli/: README.md  __init__.py  __main__.py  apps.py  billing.py  carlito.py  chat.py  commit.py  consent.py  contract.py  core.py  curriculum.py  db.py  entitlements_cmd.py  entry.py  env.py  flow.py  forecast.py  frame.py  hypothesize.py  infer.py  init.py  intro.py  lab.py  marketplace.py  metrics.py  observe.py  operations.py  platform.py  project_data.py  prompt.py  push.py  queue.py  resonant.py  session_cmd.py  shared.py  startup.py  substrate.py  training.py  trust.py  (+5 more)
src/carl_studio/compute/: README.md  __init__.py  hf_jobs.py  local.py  prime.py  protocol.py  runpod.py  ssh.py  tinker.py
src/carl_studio/credits/: README.md  __init__.py  _cli.py  balance.py  estimate.py
src/carl_studio/cu/: __init__.py  anthropic_compat.py  browser.py  privacy.py
src/carl_studio/data/: __init__.py  curriculum.py  kits.py  recipe.py  registry.py  sources.yaml  types.py  validator.py
src/carl_studio/env_setup/: __init__.py  questions.py  render.py  state.py
src/carl_studio/environments/: __init__.py  atropos.py  connection.py  openenv.py  openreward.py  prime_rl.py  protocol.py  registry.py  validation.py  verifiers.py
src/carl_studio/eval/: __init__.py  runner.py
src/carl_studio/experiment/: __init__.py  manager.py  types.py
src/carl_studio/handles/: __init__.py  bundle.py  data.py  resolvers.py  subprocess.py
src/carl_studio/heartbeat/: __init__.py  connection.py  daemon.py  loop.py  phases.py  surface.py
src/carl_studio/hub/: __init__.py  models.py
src/carl_studio/learn/: __init__.py  ingest.py  pipeline.py  planner.py  qa_gen.py  quality.py  synthesize.py
src/carl_studio/mcp/: __init__.py  connection.py  elicitation.py  output_schemas.py  sampling.py  server.py  session.py  tasks.py
src/carl_studio/observe/: __init__.py  ansi.py  app.py  cli_monitor.py  crystal_panel.py  crystal_viz.py  data_source.py  forecast_dashboard.py  run_types.py  sparkline.py  substrate_monitor.py
src/carl_studio/paper/: __init__.py  experiments.py  generator.py
src/carl_studio/primitives/: README.md  __init__.py  coherence_observer.py  coherence_probe.py  coherence_trace.py  constants.py  frame_buffer.py  math.py
src/carl_studio/research/: _cli.py  (+2 more)
tests/: _playwright_stub.py  conftest.py  test_a2a.py  test_a2a_cli.py  test_a2a_connection.py  test_a2a_identity.py  test_a2a_push.py  test_a2a_spec.py  test_a2a_streaming.py  test_a2a_v1_conformance.py  test_adapter_resolution.py  test_adapters.py  test_adapters_connection.py  test_admin_gate_seam.py  test_agent.py  test_agent_features.py  test_agent_memory.py  test_align.py  test_axon_forwarder.py  test_bench.py  test_billing.py  test_browser_toolkit.py  test_bundler.py  test_callbacks.py  test_camp.py  test_camp_login_bearer_resolution.py  test_carl_env.py  test_carl_home.py  test_carl_update.py  test_carlito.py  test_cascade.py  test_cascade_crystallization.py  test_chat_agent_robustness.py  test_chat_agent_witness.py  test_chat_cost_streaming.py  test_cli.py  test_cli_chat_surfaces.py  test_cli_contract.py  test_cli_entry_router.py  test_cli_first_run.py  (+132 more)
tests/journeys/: BATCHES.md  JOURNEYS.md  test_journeys_v18.py
(+78 files in other folders)
