[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "carl-studio"
version = "0.3.0"
description = "CARL (Coherence-Aware Reinforcement Learning) — information-theoretic reward signals for LLM training via token-level probability distributions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Tej Desai", email = "tej@terminals.tech" },
]
keywords = [
    "rl",
    "reinforcement-learning",
    "grpo",
    "coherence",
    "training",
    "llm",
    "information-theory",
    "reward-shaping",
    "trl",
    "rlhf",
    "tool-calling",
    "coding-agent",
    "alignment",
    "observability",
    "phase-transition",
    "entropy",
    "huggingface",
    "lora",
    "qlora",
    "fine-tuning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA",
]

dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "rich>=14.0",
    "numpy",
    "anyio>=4.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/wheattoast11/carl"
Documentation = "https://github.com/wheattoast11/carl#readme"
Repository = "https://github.com/wheattoast11/carl"
Issues = "https://github.com/wheattoast11/carl/issues"

[project.optional-dependencies]
training = [
    "torch>=2.4",
    "transformers>=5.0",
    "trl>=1.0",
    "peft>=0.15",
    "datasets>=4.0",
    "bitsandbytes",
    "trackio",
]
observe = ["anthropic>=0.95", "gradio-client>=1.0"]
hf = ["huggingface-hub>=1.0"]
runpod = ["runpod>=1.7"]
tinker = ["tinker>=0.16"]
tui = ["textual>=1.0", "textual-plotext>=0.3"]
mcp = ["mcp>=1.0"]
research = ["arxiv>=3.0"]
a2a = ["a2a-python>=0.0.1"]
wallet = ["coinbase-agentkit>=0.7"]
payments = ["stripe-agent-toolkit>=0.7"]
dev = ["pytest", "ruff", "pyright"]
all = ["carl-studio[training,observe,hf,runpod,tinker,tui,mcp,research,a2a,dev]"]

[project.scripts]
carl = "carl_studio.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/carl_studio"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"
pythonVersion = "3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
