[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "carl-studio"
version = "0.15.0"
description = "CARL (Coherence-Aware Reinforcement Learning) — information-theoretic reward signals for LLM training via token-level probability distributions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Tej Desai", email = "tej@terminals.tech" },
]
keywords = [
    "rl",
    "reinforcement-learning",
    "grpo",
    "coherence",
    "training",
    "llm",
    "information-theory",
    "reward-shaping",
    "trl",
    "rlhf",
    "tool-calling",
    "coding-agent",
    "alignment",
    "observability",
    "phase-transition",
    "entropy",
    "huggingface",
    "lora",
    "qlora",
    "fine-tuning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA",
]

dependencies = [
    "carl-core>=0.1.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "rich>=14.0",
    "numpy",
    "anyio>=4.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/wheattoast11/carl"
Documentation = "https://github.com/wheattoast11/carl#readme"
Repository = "https://github.com/wheattoast11/carl"
Issues = "https://github.com/wheattoast11/carl/issues"

[project.optional-dependencies]
# Meta-extra: the recommended starting point for most users.
quickstart = ["carl-studio[training,hf,observe]"]
training = [
    "torch>=2.4",
    "transformers>=5.0",
    "trl>=1.0",
    "peft>=0.15",
    "datasets>=4.0",
    "bitsandbytes",
    "trackio",
]
observe = ["anthropic>=0.95", "gradio-client>=1.0"]
hf = ["huggingface-hub>=1.0"]
runpod = ["runpod>=1.7"]
tinker = ["tinker>=0.16"]
tui = ["textual>=1.0", "textual-plotext>=0.3"]
mcp = ["mcp>=1.10"]
research = ["arxiv>=3.0"]
a2a = ["a2a-python>=0.0.1"]
# NOTE: `wallet` pulls coinbase-agentkit which pins x402<2, while the
# standalone `x402` extra requires x402>=2.7. They are mutually exclusive;
# pick one. The [tool.uv] `conflicts` table below encodes this so `uv lock`
# can succeed. `[all]` includes `x402` (the standalone, newer rail) but not
# `wallet`; install `[wallet]` separately if you need Coinbase AgentKit.
wallet = ["coinbase-agentkit>=0.7", "cryptography>=42.0.0", "keyring>=24.0.0"]
x402 = ["x402>=2.7"]
payments = ["stripe-agent-toolkit>=0.7"]
metrics = ["prometheus-client>=0.25"]
constitutional = ["pynacl>=1.5"]
# Slime (THUDM/slime) — Apache-2.0 RL framework (Megatron-LM + SGLang).
# This extra pulls the rollout-side dep (sglang). Megatron-LM and slime
# itself remain user-built per https://thudm.github.io/slime/ — slime
# isn't a published wheel and Megatron-LM needs CUDA/ROCm-specific build
# flags that pip can't safely handle. Included in [all] for ergonomics;
# SlimeAdapter.available() returns False until the user finishes the
# source-build steps, with missing_dependencies() naming each gap.
slime = ["sglang>=0.4"]
# Zero-knowledge secrets toolkit (v0.16). Aggregates the three new deps
# required for the virtual-KVM flow (mint → clipboard → paste → wipe)
# with audit via InteractionChain. pynacl + keyring also appear in other
# extras; this aggregator lets users install the full secrets surface
# without pulling wallet/constitutional transitively.
secrets = [
    "pynacl>=1.5",
    "keyring>=24.0.0",
    "pyperclip>=1.9.0",
]
dev = ["pytest", "ruff", "pyright", "hypothesis>=6.100"]
all = ["carl-studio[training,observe,hf,runpod,tinker,tui,mcp,research,a2a,x402,payments,metrics,constitutional,slime,secrets,dev]"]

[project.scripts]
carl = "carl_studio.cli:app"
carl-heartbeat = "carl_studio.heartbeat.daemon:main"

[tool.hatch.build.targets.wheel]
packages = ["src/carl_studio"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
carl-core = { workspace = true }

# Declared dependency conflicts among optional extras. `coinbase-agentkit`
# (inside `wallet`) pins x402<2 while the standalone `x402` extra requires
# x402>=2.7, so they cannot coexist in one environment. Declaring the
# conflict lets `uv lock` produce an `all`-target lockfile while preserving
# both as independently installable.
[tool.uv]
conflicts = [
    [
        { extra = "wallet" },
        { extra = "x402" },
    ],
    [
        { extra = "wallet" },
        { extra = "all" },
    ],
]

[tool.pytest.ini_options]
testpaths = ["tests", "packages/carl-core/tests"]
addopts = "--import-mode=importlib"
# ``tests`` on the path lets test files share helper modules such as
# ``tests/_playwright_stub.py`` without needing an ``__init__.py`` that
# would conflict with the importlib import mode.
pythonpath = [".", "src", "packages/carl-core/src", "tests"]
markers = [
    "private: tests that require the private resonance runtime (admin unlock or `resonance` package on sys.path). Skipped by default when the runtime is unreachable.",
]

[tool.pyright]
include = ["src", "packages/*/src", "packages/*/tests", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.11"
extraPaths = ["packages/carl-core/src"]

[tool.ruff]
target-version = "py311"
line-length = 100
